--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
     var continentsElements = [];
     var paysElements = [];
     var regionElements = [];
+    var capitalesElements = [];
+    var citesElements = [];
     var villesElements = [];
+    var villagesElements = [];
     var allTextElements = [];  // Pour toggle global
     var allRectElements = [];  // Pour toggle des rectangles
-	// Variable pour stocker tous les noms (pays, continents, etc.)
-	var allNames = [];
+    var allNames = [];  // Pour la recherche
 
     // Fonction de conversion des coordonnées pour les adapter à OpenSeadragon
     function convertCoordinates(x, y) {
@@ -266,10 +268,11 @@
 	// Ajouter les textes et rectangles pour les continents, pays, régions et autres en fonction de leur niveau de zoom
 	addTextAndRectFromCSV("./Data/DT_Continents.csv", "0.03", continentsElements, 0.03, 0.02);   // xOffset = -10, yOffset = 5
 	addTextAndRectFromCSV("./Data/DT_Pays.csv", "0.01", paysElements, 0.015, 0.01);   // xOffset = -5, yOffset = 0
-	addTextAndRectFromCSV("./Data/DT_Region.csv", "0.004", regionElements, 0.005, 0.002); // xOffset = 0, yOffset = 0
-	addTextAndRectFromCSV("./Data/DT_Villes.csv", "0.0011", villesElements, 0, 0);   // xOffset = 0, yOffset = 0
-	addTextAndRectFromCSV("./Data/DT_Cites.csv", "0.0015", villesElements, 0, 0);    // xOffset = 0, yOffset = 0
-	addTextAndRectFromCSV("./Data/DT_Villages_Fantasy.csv", "0.0006", villesElements, 0, 0); // xOffset = 0, yOffset = 0
+	addTextAndRectFromCSV("./Data/DT_Region.csv", "0.004", regionElements, 0.005, 0.002); // xOffset = 0, yOffset = 0	
+	addTextAndRectFromCSV("./Data/DT_Capitale.csv", "0.0015", capitalesElements, 0, 0);   // Capitales (anciennement cités)
+	addTextAndRectFromCSV("./Data/DT_Cites.csv", "0.0011", citesElements, 0, 0);          // Cités (anciennement villes)
+	addTextAndRectFromCSV("./Data/DT_Villes_Fantasy.csv", "0.0006", villesElements, 0, 0);        // Villes (anciennement villages)
+	addTextAndRectFromCSV("./Data/DT_Villages.csv", "0.0004", villagesElements, 0, 0); // Villages (nouvelle catégorie)
 
 	// Gestion de la saisie dans la barre de recherche
 	document.getElementById('searchInput').addEventListener('input', function() {
@@ -307,7 +310,7 @@
 		var query = document.getElementById('searchInput').value.toLowerCase();
 		var found = false;
 
-		[continentsElements, paysElements, regionElements, villesElements].forEach(function(elementsArray, index) {
+		[continentsElements, paysElements, regionElements, capitalesElements, citesElements, villesElements, villagesElements].forEach(function(elementsArray, index) {
 			elementsArray.forEach(function(element) {
 				if (element.name && element.name.toLowerCase() === query) {
 					found = true;
@@ -317,22 +320,32 @@
 
 					// Ajuster le niveau de zoom en fonction du type d'élément
 					var zoomLevel;
-					switch (index) {
-						case 0: // Continents
-							zoomLevel = 1.9;
-							break;
-						case 1: // Pays
-							zoomLevel = 3.9;
-							break;
-						case 2: // Régions
-							zoomLevel = 9.9;
-							break;
-						case 3: // Villes
-							zoomLevel = 17;
-							break;
-						default:
-							zoomLevel = 4; // Par défaut, zoom intermédiaire
-							break;
+			                    switch (index) {
+			                        case 0: // Continents
+			                            zoomLevel = 1.9;
+			                            break;
+			                        case 1: // Pays
+			                            zoomLevel = 3.9;
+			                            break;
+			                        case 2: // Régions
+			                            zoomLevel = 9.9;
+			                            break;
+			                        case 3: // Capitales
+			                            zoomLevel = 13.9;
+			                            break;
+			                        case 4: // Cités
+			                            zoomLevel = 15.9;
+			                            break;
+			                        case 5: // Villes
+			                            zoomLevel = 17.9;
+			                            break;
+			                        case 6: // Villages
+			                            zoomLevel = 19.9;
+			                            break;
+			                        default:
+			                            zoomLevel = 4;
+			                            break;
+			                    }
 					}
 					viewer.viewport.zoomTo(zoomLevel); // Appliquer le niveau de zoom
 				}
@@ -369,13 +382,33 @@
             element.text.style.display = display;
             element.rect.style.display = display;
         });
-
-        // Gestion de la visibilité pour les villes, cités et villages
-        villesElements.forEach(function(element) {
-            var display = (zoomLevel >= 10) ? 'block' : 'none';
-            element.text.style.display = display;
-            element.rect.style.display = display;
-        });
+	    // Affichage des capitales (anciennement cités)
+	    capitalesElements.forEach(function(element) {
+	        var display = (zoomLevel >= 14) ? 'block' : 'none';
+	        element.text.style.display = display;
+	        element.rect.style.display = display;
+	    });
+	
+	    // Affichage des cités (anciennement villes)
+	    citesElements.forEach(function(element) {
+	        var display = (zoomLevel >= 16) ? 'block' : 'none';
+	        element.text.style.display = display;
+	        element.rect.style.display = display;
+	    });
+	
+	    // Affichage des villes (anciennement villages)
+	    villesElements.forEach(function(element) {
+	        var display = (zoomLevel >= 18) ? 'block' : 'none';
+	        element.text.style.display = display;
+	        element.rect.style.display = display;
+	    });
+	
+	    // Affichage des villages (nouvelle catégorie)
+	    villagesElements.forEach(function(element) {
+	        var display = (zoomLevel >= 20) ? 'block' : 'none';
+	        element.text.style.display = display;
+	        element.rect.style.display = display;
+	    });
     }
 
     // Écouter les événements de zoom et mettre à jour la visibilité
