--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 	addTextAndRectFromCSV("./Data/DT_Continents.csv", "0.03", continentsElements, 0.03, 0.02);   // xOffset = -10, yOffset = 5
 	addTextAndRectFromCSV("./Data/DT_Pays.csv", "0.01", paysElements, 0.015, 0.01);   // xOffset = -5, yOffset = 0
 	addTextAndRectFromCSV("./Data/DT_Region.csv", "0.004", regionElements, 0.005, 0.002); // xOffset = 0, yOffset = 0	
-	addTextAndRectFromCSV("./Data/DT_Capitale.csv", "0.0015", capitalesElements, 0, 0);   // Capitales (anciennement cités)
+	addTextAndRectFromCSV("./Data/DT_Capitales.csv", "0.0015", capitalesElements, 0, 0);   // Capitales (anciennement cités)
 	addTextAndRectFromCSV("./Data/DT_Cites.csv", "0.0011", citesElements, 0, 0);          // Cités (anciennement villes)
 	addTextAndRectFromCSV("./Data/DT_Villes_Fantasy.csv", "0.0006", villesElements, 0, 0);        // Villes (anciennement villages)
 	addTextAndRectFromCSV("./Data/DT_Villages.csv", "0.0004", villagesElements, 0, 0); // Villages (nouvelle catégorie)
