--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <!-- Barre de recherche et boutons de contrôle -->
     <div class="controls">
         <input type="text" id="searchInput" placeholder="Rechercher un nom...">
+	<div id="suggestions" class="suggestions-list"></div> <!-- Conteneur pour les suggestions -->
         <button id="searchButton">Rechercher</button>
     </div>
 
